# mao-thought-multi-agent

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-23-mao-thought-multi-agent-implementation.md
docs/superpowers/specs/: 2026-04-23-mao-thought-multi-agent-design.md
src/mao_agent/: api.py  llm.py  main.py
src/mao_agent/agents/: __init__.py  base.py  contradiction.py  editor.py  mass_line.py  paper_tiger.py  practice.py  protracted_war.py  rural_strategy.py  united_front.py
src/mao_agent/knowledge/: 01-contradiction.md  02-practice.md  03-protracted-war.md  04-rural-strategy.md  05-united-front.md  06-mass-line.md  07-paper-tiger.md  loader.py  pdf_importer.py  updater.py
src/mao_agent/output/: formatter.py
src/mao_agent/tools/: report.py  search.py
tests/: test_agents.py  test_integration.py  test_knowledge.py
